# beinenu-com-transcribe

./: .gitignore  beinenu-com-transcribe-gdrive.ipynb  beinenu-com-transcribe.ipynb  beinenu-com-transcribe.py  beinenu_com_transcribe.py  bible_audio_subtitles_generator.ipynb  client_secrets.json  pyproject.toml  subtitles.ipynb  temp.py
.ipynb_checkpoints/: beinenu-com-transcribe-gdrive-checkpoint.ipynb  subtitles-checkpoint.ipynb
src/: beinenu_com_site.py  convert_google_auth_code.py  download_file.py  env_name.py  google_drive_upload.py  hebrew_text_utils.py  transcribe.py
