[tool.poetry]
name = "beinenu-com-transcribe"
version = "0.1.0"
description = ""
authors = ["MusiCode <musicode3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
PyDrive = "^1.3.1"
jupyter = "^1.0.0"
pysrt = "^1.1.2"
faster-whisper = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
